--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,25 @@ __pycache__/
 **/__pycache__/**
 **/.cache
 **/.cache_column
+results/
+*.pyc
+*.pyd
+*.pyo
+*.pyc~
+*.pyd~
+*.pyo~
+*.bak
+*.tmp
+*.swp
+*.log
+*.coverage
+*.coverage.*
+*.cache
+*.cache.*
+*.pytest_cache
+*.pytest_cache.*
+*.pytest_cache/
+*.pytest_cache/v
+*.pytest_cache/c
+*.pytest_cache/n
+*.pytest_cache/lastfailed
