--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ mysql-connector-python==8.1.0
 pydantic==2.7.0
 pydantic_core==2.18.1
 tokenizers==0.14.1
+tabulate==0.9.0
+sqlalchemy==2.0.19
+sqlite==3.41.2
+torch==2.1.0
