--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,9 @@ pydantic_core==2.18.1
 tokenizers==0.14.1
 tabulate==0.9.0
 sqlalchemy==2.0.19
-sqlite==3.41.2
 torch==2.1.0
+sqlparse==0.4.4
+datasets==2.14.5
+emoji==1.7.0
+sentence_transformers==3.0.1
+recognizers-text-suite
